# CodeCoach

./: .gitignore  CMakeLists.txt  Compiler.cpp  Compiler.h  ComplexityAnalyzer.cpp  ComplexityAnalyzer.h  LLMservice.cpp  LLMservice.h  MainWindow.ui  main.cpp  mainwindow.cpp  mainwindow.h
Interfaz/forms/: MainWindow.ui  mainwindow.ui
Interfaz/src/: CodeEditor.cpp  CodeEditor.h  Compiler.cpp  Compiler.h  CppHighlighter.cpp  CppHighlighter.h  MongoService.cpp  MongoService.h  mainwindow.cpp  mainwindow.h
core/include/: Interpreter.h
markdowns/: Prueba1.md  facil1.md  prueba.md
